--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,30 @@
+@import url("https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100..900&family=Poppins:wght@300;400&display=swap");
+
+/* ========================================================================================================= */
+/* .poppins-light {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.poppins-regular {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+} */
+
+/* .encode-sans-<uniquifier> {
+  font-family: "Encode Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+} */
+
+/* ======================================================================================================== */
+
+
 * {
   margin: 0;
   padding: 0;
