Get product on admin dashboard

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,3 +46,11 @@
   margin: 0;
   padding: 0;
 }
+
+/* all product */
+.product-link{
+  text-decoration: none !important;
+  color: black !important;
+}
+
+
